[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Alan Briolat <alan.briolat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
permutohedron = "0.2.4"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "benchmark"
harness = false
